# agently-edge

./: .gitignore  .gitignore.conflict-local.2026-03-23  .s3-credentials.env  AGENTS.md  Cargo.toml  IDENTITY.md  README.conflict-s3.2026-03-23.md  README.md  TOOLS.conflict-local.2026-03-19.md  USER.md  agently-edge-dev-plan.md  agently-edge-product.md  agently-edge-readme.md  main  main.conflict-local.2026-03-19  main.conflict-local.2026-03-20  main.conflict-local.2026-03-21  pyproject.toml  siyuan-api-config.md
.clawhub/: lock.conflict-local.2026-03-19.json  lock.conflict-local.2026-03-20.json  lock.conflict-local.2026-03-22.json  lock.conflict-s3.2026-03-20.json
.github/workflows/: docs.yml  rust-ci.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
docs/: DEPLOY.md  LLAMA-INTEGRATION-GUIDE.md  LLAMA-INTEGRATION-STATUS.md  Makefile  PHASE1-COMPLETE.md  PRODUCT.md  mvp-implementation-plan.md
docs/plans/: 2026-03-23-cli-design.md  2026-03-23-core-architecture-design.md
docs/source/: api.rst  conf.py  index.rst  installation.rst  quickstart.rst
examples/: README.md
examples/hello-world/: Cargo.toml  README.md  agent.yaml  main.rs
examples/hello-world/src/: lib.rs  main.rs
examples/hello-world/tests/: config_test.rs  conversation_test.rs
memory/: 2026-03-22.md  s3-sync-log.md
openspec/changes/: README.md
openspec/changes/archive/2026-03-22-task-1-1-3-sphinx-docs/: README.md
openspec/changes/archive/2026-03-22-task-1-1-4-rust-ci/: README.md
openspec/changes/archive/2026-03-22-task-1-1-5-readme-update/: README.md
openspec/changes/archive/2026-03-22-task-1-2-core-modules/: README.md
openspec/changes/archive/2026-03-22-task-1-3-llm-integration/: README.md
openspec/changes/archive/task-1-4-hello-world-agent/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/task-1-4-hello-world-agent/specs/: functional-spec.md
openspec/changes/archive/task-1-5-cli-tool/: README.md  tasks.md
openspec/changes/archive/task-1-5-cli-tool/specs/: functional-spec.md
openspec/changes/task-1-1-runtime-setup/: README.md
openspec/changes/task-1-4-hello-world-agent/: README.md  proposal.md  tasks.md
openspec/changes/task-1-5-cli-tool/: README.md  design.md  proposal.md
openspec/changes/task-1-6-llama-cpp-integration/: README.md  design.md  proposal.md  tasks.md
openspec/changes/task-1-6-llama-cpp-integration/specs/: functional-spec.md
runtime/: Cargo.toml  build.rs
runtime/src/: agent.rs  config.rs  ffi.rs  lib.rs  llama_impl.rs  llm.rs  message_bus.rs  runtime.rs
runtime/src/tools/: http.rs  mod.rs  registry.rs  shell.rs
runtime/tests/: agent_test.rs  config_test.rs  integration_llm_test.rs  integration_test.rs  llm_test.rs  message_bus_test.rs  prompt_test.rs  tool_call_test.rs  tools_test.rs
scripts/: build-deploy.sh  quick-test.sh  sync-s3.conflict-local.2026-03-22.py  sync-s3.conflict-s3.2026-03-20.py  sync-siyuan-s3.py
skills/: .skills_store_lock.conflict-local.2026-03-19.json  .skills_store_lock.conflict-local.2026-03-20.json  .skills_store_lock.conflict-local.2026-03-22.json  .skills_store_lock.conflict-s3.2026-03-20.json
skills/ai-news-pusher/: .env  _meta.json
skills/ai-news-pusher/scripts/: push_to_email.py
skills/btpanel/: _meta.json
skills/claw-superpowers/: _meta.json
skills/siyuan-skill/: SKILL.md  _meta.json
skills/siyuan-task-skill/: _meta.json
skills/summarize/: _meta.conflict-local.2026-03-19.json
