[package]
name = "agently"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for agently Edge Runtime"

[[bin]]
name = "agently"
path = "src/main.rs"

[dependencies]
agently-edge-runtime = { path = "../runtime" }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
