[package]
name = "agently-edge-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Edge AI Agent Runtime for Commercial Display Devices"

[lib]
name = "agently_edge"
path = "src/lib.rs"

[dependencies]
# LLM 引擎
llama-cpp-2 = "0.1.67"
# 异步运行时
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# 错误处理
anyhow = "1.0"
thiserror = "1.0"
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 配置
config = "0.14"
# UUID (for tool call IDs)
uuid = { version = "1.6", features = ["v4"] }
# CPU 核心数
num_cpus = "1.16"
# FFI 绑定
bindgen = { version = "0.69", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"

[build-dependencies]
cc = { version = "1.0", optional = true }

[features]
default = []
full-llama = ["bindgen", "cc"]
